# shoelace

./: .build.yml  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  flake.nix  shoelace.example.toml
contrib/: docker-compose.yml  shoelace.service  shoelace.toml
src/: api.rs  config.rs  error.rs  front.rs  main.rs  proxy.rs  req.rs  rss.rs  scraping.rs  test.rs  utils.rs
src/backend/: api.rs  mod.rs  scraping.rs  utils.rs
src/common/: config.rs  error.rs  mod.rs  req.rs
src/frontend/: formatters.rs  mod.rs  routes.rs  templates.rs
src/proxy/: error.rs  keystore.rs  mod.rs  proxy.rs
static/css/: error.css  home.css  main.css  post.css  subpost.css  user.css
templates/: base.html  home.html  home.j2  macros.html  post.html  post.j2  user.html  user.j2
templates/common/: base.html  base.j2  error.html  error.j2  macro.html
templates/components/: media.html  post.html
