[package]
name = "shoelace"
version = "0.3.0-alpha"
edition = "2021"
authors = ["Lux Aliaga <lux@nixgoat.me>"]
repository = "https://git.sr.ht/~nixgoat/shoelace"
license = "GPL-3.0-or-later"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-web-static-files = "4.0"
askama = "0.12"
base64 = "0.22"
blake2 = "0.10"
chrono = "0.4"
config = "0.14"
futures = "0.3.30"
git-version = "0.3"
include_dir = { version = "0.7", features = ["glob"] }
infer = "0.16"
lazy_static = "1.4"
reqwest = "0.12"
redis = { version="*", features = ["tokio-comp"] }
rss = "2.0"
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spools = "0.6.1"
static-files = "0.2.1"
tera = "1"
thiserror = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
static-files = "0.2.1"
